# calculator

./: .gitignore  CMakeLists.txt  PROGRAM_CONCEPT.md  README.md  build.sh  duke_patch.patch  start.bat
.github/workflows/: ci.yml
Calculadora/: AGENTS.MD  App.cpp  App.h  CHECKLIST.md  Corte.cpp  Debug.h  Makefile  README.md  UPDATE.md  app.cpp  main.cpp  modulos.h  persist.h  persist_cuts.cpp  update.md
Calculadora/data/: materiais.csv  materiais.csv.bak  materiais.json  materiais.json.bak  settings.json
Calculadora/include/: App.h  Corte.h  Material.h  calculadora.hpp  cli.h  core.h  format.h  modulos.h  persist.h  persist.hpp  plano_corte.h
Calculadora/include/cli/: App.h  args.h
Calculadora/include/custo/: CustoParams.h  EstimadorCusto.h
Calculadora/include/domain/: MaterialBase.h  MaterialCubico.h  MaterialFactory.h  MaterialLinear.h  MaterialUnitario.h  Projeto.h  Tempo.h
Calculadora/include/persist/: projeto.hpp  tempo.hpp
Calculadora/include/ui/: Menu.h  Screens.h
Calculadora/src/: App.cpp  Corte.cpp  Material.cpp  cli.cpp  core.cpp  main.cpp  persist.cpp  persist_projeto.cpp  persist_tempo.cpp  plano_corte.cpp
Calculadora/src/cli/: app.cpp  args.cpp
Calculadora/src/custo/: EstimadorCusto.cpp
Calculadora/src/domain/: MaterialCubico.cpp  MaterialFactory.cpp  MaterialLinear.cpp  MaterialUnitario.cpp  Projeto.cpp  Tempo.cpp
Calculadora/src/ui/: Menu.cpp
Calculadora/tests/: Makefile  calculadora_api_test.cpp  cli_test.cpp  data_path_test.cpp  estimador_custo_test.cpp  extremos_test.cpp  material_factory_test.cpp  material_validacao_tipo_test.cpp  menu_test.cpp  namespace.h  persist_golden_test.cpp  persist_helpers_test.cpp  persist_io_test.cpp  persist_migration_test.cpp  persist_test.cpp  plano_dto_test.cpp  plano_index_test.cpp  plano_io_test.cpp  plano_persist_test.cpp  projeto_custo_test.cpp  projeto_test.cpp  run_tests.cpp  settings_migration_test.cpp  tempo_test.cpp
Calculadora/tests/data/: ok.csv  ok.csv.bak  ok.json  ok.json.bak
Calculadora/updates/: v0-01.md  v0-02.md  v0.01.md  v0.02.md
DUKE/: AGENTS.MD  CHECKLIST.md  Makefile  README.md  UPDATE.md
DUKE/data/: settings.json
DUKE/include/: ApplicationCore.h  Corte.h  Customer.h  Material.h  Order.h  core.h  persist.hpp  plano_corte.h
DUKE/include/cli/: App.h  args.h  parser.h
DUKE/include/custo/: CustoParams.h  EstimadorCusto.h
DUKE/include/domain/: MaterialBase.h  MaterialCubico.h  MaterialFactory.h  MaterialUnitario.h  Projeto.h  Tempo.h
DUKE/src/: ApplicationCore.cpp  Corte.cpp  Customer.cpp  Material.cpp  Order.cpp  calculadora.cpp  core.cpp  main.cpp  persist_projeto.cpp  persist_tempo.cpp  plano_corte.cpp
DUKE/tests/: Makefile  app_io_test.cpp  args_parse_test.cpp  gui_mainwindow.test.cpp  gui_menu_widget_test.cpp  run_tests.cpp
Financeiro/: AGENTS.MD  UPDATE_FINANCE.md
Financeiro/include/: Debug.h
apps/: CMakeLists.txt
apps/admin/: AdminApp.cpp  AdminApp.h  CMakeLists.txt  main.cpp
apps/designer/: CMakeLists.txt  DesignerApp.cpp  DesignerApp.h  main.cpp
apps/production/: CMakeLists.txt  ProductionApp.cpp  ProductionApp.h  main.cpp
apps/sales/: CMakeLists.txt  SalesApp.cpp  SalesApp.h  main.cpp
core/: CMakeLists.txt  Makefile
core/include/core/: MaterialDTO.h  Settings.h  atomic_write.h  notifications.h  paths.h  persist.h  reports.h
core/src/: atomic_write.cpp  core.cpp  notifications.cpp  paths.cpp  persist.cpp  persist_csv.cpp  persist_json.cpp  persist_xml.cpp  reports.cpp  settings.cpp
docs/: AGENTS.MD  CHANGELOG.md  CHECKLIST.md  CUSTO.md  FORMATS.md  MATERIAIS.md  MENU.md  MODULES.md  PROGRAM_CONCEPT.md  PROJETOS.md  RELATORIOS.md  REVISIONS.md  ROADMAP.md  TEMPOS.md  USAGE.md
docs/finance/: AGENTS.MD  CHECKLIST.md  UPDATE_FINANCE.md
include/duke/: ApplicationCore.h  Material.h  comparison.h  core.h  duke.hpp  error.h  persist.hpp
include/finance/: Filters.h  Lancamento.h  Repo.h  Report.h  Serialize.h  Supplier.h  SupplierRepo.h  Tipos.h
include/production/: ModeloProducao.h
scripts/: check_dependencies.bat  check_deps.ps1  check_deps.sh  start.bat
src/: fin.cpp
src/duke/: ApplicationCore.cpp  CMakeLists.txt  Makefile  Material.cpp  comparison.cpp  main.cpp  persist.cpp  persist_projeto.cpp  persist_tempo.cpp
src/duke/cli/: app.cpp  args.cpp  commands.cpp  processor.cpp  utils.cpp
src/duke/custo/: EstimadorCusto.cpp
src/duke/domain/: MaterialLinear.cpp  MaterialUnitario.cpp
src/duke/gui/: GuiBridge.cpp  MainWindow.cpp  main_qt.cpp  main_wx.cpp
src/finance/: CMakeLists.txt  Repo.cpp  Report.cpp  Serialize.cpp  SupplierRepo.cpp
src/production/: CMakeLists.txt  ModeloProducao.cpp
tests/: Makefile  run_tests  test_runner.h
tests/admin/: add_transaction_test.cpp  list_transactions_test.cpp  run_tests.cpp  sum_transactions_test.cpp  suppliers_test.cpp
tests/calculadora/: calculadora_api_test.cpp  cli_test.cpp  corte_test.cpp  extremos_test.cpp  persist_golden_test.cpp  plano_io_test.cpp  projeto_test.cpp  run_tests.cpp  tempo_test.cpp
tests/core/: atomic_write_test.cpp  notifications_test.cpp  persist_error_test.cpp  persist_load_save_test.cpp  reports_test.cpp  run_tests.cpp  settings_persist_test.cpp
tests/designer/: designer_app_test.cpp  run_tests.cpp
tests/duke/: application_core_test.cpp  cli_test.cpp  comparison_test.cpp  corte_test.cpp  data_path_test.cpp  domain_material_test.cpp  duke_api_test.cpp  estimador_custo_test.cpp  extremos_test.cpp  material_factory_test.cpp  material_mostrar_test.cpp  material_validacao_tipo_test.cpp  menu_test.cpp  namespace.h  persist_golden_test.cpp  persist_helpers_test.cpp  persist_io_test.cpp  persist_migration_test.cpp  persist_test.cpp  plano_dto_test.cpp  plano_index_test.cpp  plano_io_test.cpp  projeto_custo_test.cpp  projeto_test.cpp  run_tests.cpp  settings_migration_test.cpp  tempo_test.cpp
tests/finance/: lancamento_test.cpp  repo_invalid_json_test.cpp  repo_test.cpp  report_mes_test.cpp  run_tests.cpp  serialize_test.cpp
tests/production/: ApplicationCore.h  order_flow_test.cpp  run_tests.cpp
tests/sales/: run_tests.cpp  sales_core_test.cpp
(+29 files in other folders)
